# cudos-example-smart-contracts

./: Cargo.toml  README.md  blast.config.js  package-lock.json  package.json  run-build-and-compile.sh  run-build.sh  run-test.sh
contracts/beta/schema/: execute_msg.json  query_msg.json
contracts/beta/src/: contract.rs  msg.rs  state.rs
contracts/lease-management-system/: Cargo.toml
contracts/lease-management-system/examples/: schema.rs
contracts/lease-management-system/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  test.rs
contracts/tic-tac-toe/: Cargo.toml  tarpaulin-report.html
contracts/tic-tac-toe/examples/: schema.rs
contracts/tic-tac-toe/schema/: array_size_3_of__array_size_3_of__nullable__boolean.json  execute_msg.json  game.json  game_result.json  query_msg.json
contracts/tic-tac-toe/src/: contract.rs  error.rs  msg.rs  state.rs
scripts/: deploy.js  interact.js
