[package]
name = "lease-management-system"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.9.1" }
cw2 = { path = "../../packages/cw2", version = "0.9.1" }
cw-controllers = { path = "../../packages/controllers", version = "0.9.1" }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.9.1" }
cosmwasm-std = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
